# Meck-P4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
.github/: FUNDING.yml
components/chmorgan__esp-audio-player/: audio_mp3.cpp
components/esp_video/src/device/: esp_video_csi_device.c
components/meshcore/: AES.h  CMakeLists.txt  MeckAudio.cpp  MeckAudio.h  MeckAudioUI.cpp  MeckAudioUI.h  MeckDataStore.h  MeckDataStore.h.bak  MeckExport.h  MeckImport.h  MeckMesh.h  MeckMesh.h.bak  MeckSDCard.h  MeckUI.cpp  MeckUI.cpp.bak  MeckUI.h  P4SX1262Radio.h  P4SX1262Radio.h.bak  SHA256.h  Stream.h  arduino_compat.cpp  arduino_compat.h  ed25519.h  es8311.cpp  meck.h  meck_app.cpp  meck_app.cpp.bak  meck_globals.cpp  meck_globals.h  meck_montserrat_14.c  meck_montserrat_16.c  meck_montserrat_18.c  meck_montserrat_22.c  meck_montserrat_24.c  meck_montserrat_28.c  meck_montserrat_30.c  meck_montserrat_32.c  target.cpp  target.h  variant.h
components/meshcore/meshcore_src/: ContactInfo.h  Dispatcher.cpp  Mesh.cpp  MeshCore.h  TransportKeyStore.h  Utils.cpp
components/meshcore/meshcore_src/ed25519/: CMakeLists.txt
components/meshcore/meshcore_src/helpers/: AdvertDataHelpers.cpp  BaseChatMesh.cpp  BaseChatMesh.h  TxtDataHelpers.cpp  base64.hpp
components/private_library/: CMakeLists.txt  New Notification 010_c2_b16_s44100.h  hi8561_driver.cpp  radiolib_bridge_driver.cpp  rm69a10_driver.cpp  st25r3916_driver.cpp  st25r3916_driver.h  t_display_p4_config.h  t_display_p4_driver.cpp  t_display_p4_driver.h  t_display_p4_keyboard_config.h
debug/examples/camera_scan/components/cpp_bus_driver-1.0.0/src/bus/iic/: hardware_iic_1.cpp
debug/examples/camera_scan/main/: main.cpp
debug/examples/es8311_sd_wav/components/cpp_bus_driver-1.0.0/src/bus/iic/: hardware_iic_1.cpp  hardware_iic_1.h
debug/examples/ethernet_basic/components/private_library/: t_display_p4_config.h
debug/examples/ethernet_iperf/components/private_library/: t_display_p4_config.h
debug/examples/ethernet_iperf/main/: main.cpp
debug/examples/hi8561_ov5640/components/cpp_bus_driver-1.0.0/src/bus/iic/: hardware_iic_1.cpp
debug/examples/hi8561_ov5640/main/: Kconfig.projbuild  app_video.h  main.cpp
debug/examples/hi8561_sc2336(green_hue_error)/main/: main.cpp
debug/examples/iperf/: CMakeLists.txt
debug/examples/iperf/components/cpp_bus_driver/: CMakeLists.txt  idf_component.yml
debug/examples/iperf/components/cpp_bus_driver/src/: tool.cpp
debug/examples/iperf/components/cpp_bus_driver/src/bus/: bus_guide.cpp  bus_guide.h
debug/examples/iperf/components/cpp_bus_driver/src/bus/iic/: hardware_iic_1.cpp  hardware_iic_1.h  hardware_iic_2.cpp  hardware_iic_2.h  software_iic.cpp
debug/examples/iperf/components/cpp_bus_driver/src/bus/sdio/: hardware_sdio.cpp  hardware_sdio.h
debug/examples/iperf/components/cpp_bus_driver/src/bus/spi/: hardware_qspi.cpp  hardware_spi.cpp
debug/examples/iperf/components/cpp_bus_driver/src/bus/uart/: hardware_uart.h
debug/examples/iperf/components/cpp_bus_driver/src/chip/iic/: aw21009xxx.cpp  aw21009xxx.h  aw862xx.cpp  cst2xxse.cpp  ft3x68.cpp  ft3x68.h  gt9895.h  gz030pcc0x.h  hi8561_touch.h  pcf8563x.cpp  sgm38121.cpp  sgm41562xx.h  tca8418.h
debug/examples/iperf/components/cpp_bus_driver/src/chip/iic_iis/: es8311.cpp
debug/examples/iperf/components/cpp_bus_driver/src/chip/sdio/: esp_at.cpp  esp_at.h
debug/examples/iperf/components/cpp_bus_driver/src/chip/spi/: co5300.cpp  co5300.h  ecx336c.cpp  ecx336c.h  sh8601.h  sx126x.cpp
debug/examples/iperf/components/cpp_bus_driver/src/resources/: haptic_chip_waveform_library.h
debug/examples/iperf/main/: CMakeLists.txt  idf_component.yml  iperf_example_main.cpp
debug/examples/usb_extend_screen/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
debug/examples/usb_extend_screen/components/cpp_bus_driver/: README.md
debug/examples/usb_extend_screen/components/cpp_bus_driver/src/: config.h  cpp_bus_driver_library.h  tool.h
debug/examples/usb_extend_screen/components/cpp_bus_driver/src/chip/: chip_guide.cpp  chip_guide.h
debug/examples/usb_extend_screen/components/private_library/: CMakeLists.txt  hi8561_driver.h  ov2710_ipa_config_色彩增值.json  rm69a10_driver.h  sc2336_ipa_config.json  t_display_p4_driver.cpp  t_display_p4_driver.h  t_display_p4_keyboard_config.h
debug/examples/usb_extend_screen/main/: CMakeLists.txt  Kconfig.projbuild  app_lcd.cpp  app_lcd.h  app_touch.cpp  app_uac.cpp  app_usb.h  idf_component.yml  main.cpp  usb_frame.c
debug/examples/uvc_ov2710/main/: uvc_example.cpp
debug/examples/uvc_ov5645/main/: uvc_example.cpp
debug/examples/uvc_sc2336/main/: uvc_example.cpp
debug/examples/video_lcd_display/main/: Kconfig.projbuild  app_lcd.h
firmware/[T-Display-P4-Keyboard][lvgl_9_ui]/: 修改日志.md
firmware/[T-Display-P4][lvgl_9_ui]/: 修改日志.md
information/Meck Docs/: audioplayerguide.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  idf_component.yml.save
main/examples/bq27220/: main.cpp
main/examples/deep_sleep/: main.cpp
main/examples/es8311/: main.cpp
main/examples/es8311_sd_wav/: main.cpp
main/examples/esp_hosted_mcu_sdio_wifi/: main.cpp
main/examples/lvgl_9_ui/: lvgl_ui.cpp  lvgl_ui.h  main.cpp  main.cpp.bak  st25r3916_driver.cpp  st25r3916_driver.h  win_home_app_icon_rf_110x110px_rgb565a8.c
main/examples/pcf8563/: main.cpp
main/examples/radiolib_sx1262_send_receive/: main.cpp
main/examples/screen_camera/: main.cpp
main/examples/screen_lvgl/: main.cpp
main/examples/screen_lvgl_touch_draw/: main.cpp
main/examples/sx1262_gfsk_send_receive/: main.cpp
main/examples/sx1262_lora_send_receive/: main.cpp
main/keyboard_examples/bq25896/: main.cpp
main/keyboard_examples/radiolib_cc1101_send_receive/: main.cpp
main/keyboard_examples/radiolib_nrf24l01_send_receive/: main.cpp
main/keyboard_examples/screen_tca8418_lvgl_touch_draw/: main.cpp
main/keyboard_examples/st25r3916/: main.cpp  st25r3916_driver.cpp  st25r3916_driver.h
main/keyboard_examples/tca8418/: main.cpp
tools/: build-release.sh  mp3_clean.py
(+27 files in other folders)
