#这里选择你需要编译的项目
if(CONFIG_EXAMPLE_BUILD_AW86224)
    set(PROJECT_PATH "examples/aw86224/")
elseif(CONFIG_EXAMPLE_BUILD_BQ27220)
    set(PROJECT_PATH "examples/bq27220/")
elseif(CONFIG_EXAMPLE_BUILD_DEEP_SLEEP)
    set(PROJECT_PATH "examples/deep_sleep/")
elseif(CONFIG_EXAMPLE_BUILD_ES8311)
    set(PROJECT_PATH "examples/es8311/")
elseif(CONFIG_EXAMPLE_BUILD_ES8311_SD_WAV)
    set(PROJECT_PATH "examples/es8311_sd_wav/")
elseif(CONFIG_EXAMPLE_BUILD_ESP32C6_AT_HOST_SDIO_UART)
    set(PROJECT_PATH "examples/esp32c6_at_host_sdio_uart/")
elseif(CONFIG_EXAMPLE_BUILD_ESP32C6_AT_HOST_SDIO_WIFI)
    set(PROJECT_PATH "examples/esp32c6_at_host_sdio_wifi/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_CAMERA)
    set(PROJECT_PATH "examples/screen_camera/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_LVGL)
    set(PROJECT_PATH "examples/screen_lvgl/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_LVGL_TOUCH_DRAW)
    set(PROJECT_PATH "examples/screen_lvgl_touch_draw/")
elseif(CONFIG_EXAMPLE_BUILD_ICM20948)
    set(PROJECT_PATH "examples/icm20948/")
elseif(CONFIG_EXAMPLE_BUILD_IIC_SCAN)
    set(PROJECT_PATH "examples/iic_scan/")
elseif(CONFIG_EXAMPLE_BUILD_L76K)
    set(PROJECT_PATH "examples/l76k/")
elseif(CONFIG_EXAMPLE_BUILD_LVGL_9_UI)
    set(PROJECT_PATH "examples/lvgl_9_ui/")
elseif(CONFIG_EXAMPLE_BUILD_PCF8563)
    set(PROJECT_PATH "examples/pcf8563/")
elseif(CONFIG_EXAMPLE_BUILD_SGM38121)
    set(PROJECT_PATH "examples/sgm38121/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_GFSK_SEND_RECEIVE)
    set(PROJECT_PATH "examples/sx1262_gfsk_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_LORA_SEND_RECEIVE)
    set(PROJECT_PATH "examples/sx1262_lora_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_TX_CONTINUOUS_WAVE)
    set(PROJECT_PATH "examples/sx1262_tx_continuous_wave/")
elseif(CONFIG_EXAMPLE_BUILD_TUSB_SERIAL_DEVICE)
    set(PROJECT_PATH "examples/tusb_serial_device/")
elseif(CONFIG_EXAMPLE_BUILD_XL9535)
    set(PROJECT_PATH "examples/xl9535/")
elseif(CONFIG_EXAMPLE_BUILD_AFE)
    set(PROJECT_PATH "examples/afe/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_SX1262_SEND_RECEIVE)
    set(PROJECT_PATH "examples/radiolib_sx1262_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_ESP_HOSTED_MCU_SDIO_WIFI)
    set(PROJECT_PATH "examples/esp_hosted_mcu_sdio_wifi/")
elseif(CONFIG_EXAMPLE_BUILD_XL9555)
    set(PROJECT_PATH "keyboard_examples/xl9555/")
elseif(CONFIG_EXAMPLE_BUILD_TCA8418)
    set(PROJECT_PATH "keyboard_examples/tca8418/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_CC1101_SEND_RECEIVE)
    set(PROJECT_PATH "keyboard_examples/radiolib_cc1101_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_NRF24L01_SEND_RECEIVE)
    set(PROJECT_PATH "keyboard_examples/radiolib_nrf24l01_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_ST25R3916)
    set(PROJECT_PATH "keyboard_examples/st25r3916/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_TCA8418_LVGL_TOUCH_DRAW)
    set(PROJECT_PATH "keyboard_examples/screen_tca8418_lvgl_touch_draw/")
endif()
        
idf_component_register(SRC_DIRS ${PROJECT_PATH} 
                        INCLUDE_DIRS ${PROJECT_PATH})

target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE -Wno-error=unused-const-variable -Wno-error=delete-non-virtual-dtor
            -Wno-error=implicit-function-declaration -fpermissive)