#这里选择你需要编译的项目
if(CONFIG_EXAMPLE_BUILD_AW86224)
    set(project_path "examples/aw86224/")
elseif(CONFIG_EXAMPLE_BUILD_BQ27220)
    set(project_path "examples/bq27220/")
elseif(CONFIG_EXAMPLE_BUILD_DEEP_SLEEP)
    set(project_path "examples/deep_sleep/")
elseif(CONFIG_EXAMPLE_BUILD_ES8311)
    set(project_path "examples/es8311/")
elseif(CONFIG_EXAMPLE_BUILD_ES8311_SD_WAV)
    set(project_path "examples/es8311_sd_wav/")
elseif(CONFIG_EXAMPLE_BUILD_ESP32C6_AT_HOST_SDIO_UART)
    set(project_path "examples/esp32c6_at_host_sdio_uart/")
elseif(CONFIG_EXAMPLE_BUILD_ESP32C6_AT_HOST_SDIO_WIFI)
    set(project_path "examples/esp32c6_at_host_sdio_wifi/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_CAMERA)
    set(project_path "examples/screen_camera/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_LVGL)
    set(project_path "examples/screen_lvgl/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_LVGL_TOUCH_DRAW)
    set(project_path "examples/screen_lvgl_touch_draw/")
elseif(CONFIG_EXAMPLE_BUILD_ICM20948)
    set(project_path "examples/icm20948/")
elseif(CONFIG_EXAMPLE_BUILD_IIC_SCAN)
    set(project_path "examples/iic_scan/")
elseif(CONFIG_EXAMPLE_BUILD_L76K)
    set(project_path "examples/l76k/")
elseif(CONFIG_EXAMPLE_BUILD_LVGL_9_UI)
    set(project_path "examples/lvgl_9_ui/")
elseif(CONFIG_EXAMPLE_BUILD_PCF8563)
    set(project_path "examples/pcf8563/")
elseif(CONFIG_EXAMPLE_BUILD_SGM38121)
    set(project_path "examples/sgm38121/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_GFSK_SEND_RECEIVE)
    set(project_path "examples/sx1262_gfsk_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_LORA_SEND_RECEIVE)
    set(project_path "examples/sx1262_lora_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_SX1262_TX_CONTINUOUS_WAVE)
    set(project_path "examples/sx1262_tx_continuous_wave/")
elseif(CONFIG_EXAMPLE_BUILD_TUSB_SERIAL_DEVICE)
    set(project_path "examples/tusb_serial_device/")
elseif(CONFIG_EXAMPLE_BUILD_XL9535)
    set(project_path "examples/xl9535/")
elseif(CONFIG_EXAMPLE_BUILD_AFE)
    set(project_path "examples/afe/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_SX1262_SEND_RECEIVE)
    set(project_path "examples/radiolib_sx1262_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_ESP_HOSTED_MCU_SDIO_WIFI)
    set(project_path "examples/esp_hosted_mcu_sdio_wifi/")
elseif(CONFIG_EXAMPLE_BUILD_XL9555)
    set(project_path "keyboard_examples/xl9555/")
elseif(CONFIG_EXAMPLE_BUILD_TCA8418)
    set(project_path "keyboard_examples/tca8418/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_CC1101_SEND_RECEIVE)
    set(project_path "keyboard_examples/radiolib_cc1101_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_RADIOLIB_NRF24L01_SEND_RECEIVE)
    set(project_path "keyboard_examples/radiolib_nrf24l01_send_receive/")
elseif(CONFIG_EXAMPLE_BUILD_ST25R3916)
    set(project_path "keyboard_examples/st25r3916/")
elseif(CONFIG_EXAMPLE_BUILD_SCREEN_TCA8418_LVGL_TOUCH_DRAW)
    set(project_path "keyboard_examples/screen_tca8418_lvgl_touch_draw/")
endif()
        
idf_component_register(SRC_DIRS ${project_path} 
                        INCLUDE_DIRS ${project_path})

target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE -Wno-error=unused-const-variable -Wno-error=delete-non-virtual-dtor
            -Wno-error=implicit-function-declaration -fpermissive)