set(src_dirs ./)
idf_component_register(
        SRC_DIRS 
        ${src_dirs} 
        INCLUDE_DIRS 
        ${src_dirs}
        REQUIRES
        "driver" "cpp_bus_driver" "esp_lcd" "esp_video" "RadioLib" "ST25R3916" "NFC-RFAL" "lvgl"
    )

target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE -Wno-error=unused-const-variable -Wno-error=delete-non-virtual-dtor
            -Wno-error=implicit-function-declaration -fpermissive)